objects/PMC_DH_Digital_Hub_Restriction_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>PMC_DH_Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Restricted_Value__c</fullName>
        <label>Restricted Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Digital Hub Restriction Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>IsProtected</columns>
        <columns>PMC_DH_Category__c</columns>
        <columns>PMC_DH_isActive__c</columns>
        <columns>PMC_DH_Restricted_Value__c</columns>
        <columns>PMC_DH_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Digital Hub Restriction Settings</pluralLabel>
</CustomObject>